--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ html {
 
 body {
     background: #fff;
-    background-color: floralwhite;
+    background-color: white;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
     color: #545454;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -15,6 +15,29 @@ body {
     margin: 0 auto;
     max-width: 800px;
     padding: 2em 2em 4em;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
 }
 
 #CenterAlign {
@@ -26,12 +49,14 @@ h1 {
     font-weight: 600;
     line-height: 1.3;
     font-size: 30;
+    font-family: cursive;
 }
 h3 {
     color:cornflowerblue;
     font-weight: 600;
     line-height: 1.3;
     font-size: 18px;
+    font-family: cursive;
 }
 
 h2 {
@@ -41,6 +66,7 @@ h2 {
     font-size: 22px;
     font-style: italic;
     text-decoration: underline;
+    font-family: cursive;
 }
 
 h4 {
@@ -49,6 +75,7 @@ h4 {
     line-height: 1.2;
     font-size: 15px;
     font-style: italic;
+    font-family: cursive;
 }
 a {
     color: #0083e8;
